tests/samples/negative/functions/method_self_not_first.ax
module method_self_not_first;

struct Counter {
    value: i32;
}

impl Counter {
    fn bad(value: i32, self: *mut Counter) -> i32 {
        return value;
    }
}

fn main() -> i32 {
    return 0;
}
